fix: adjust padding for Lucide icons for better alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -25,5 +25,6 @@ html {
 
   .lucide {
     display: inline;
+    padding-block-start: 0.11em;
   }
 }
